# weightbot

./: .gitignore  Pipfile  README.md  config  pyproject.toml  requirements.txt  weightbot.py
.github/workflows/: codeql.yml
